# UltimateAI

./: .gitignore  CMakeLists.txt  README.md  script_doc.txt  todo.txt
cmake_modules/: FindSFML.cmake
res/: sources.txt
res/scripts/: default.lua  default_old.lua
src/: AI.cpp  AI.hpp  AI_static.cpp  Disc.cpp  Disc.hpp  Field.cpp  Field.hpp  Logfile.cpp  Logfile.hpp  LuaError.cpp  LuaError.hpp  Match.cpp  Match.hpp  MobileObject.cpp  MobileObject.hpp  Movement.cpp  Movement.hpp  PlayDirection.hpp  Player.cpp  Player.hpp  Program.cpp  Program.hpp  Score.cpp  Score.hpp  Team.cpp  Team.hpp  TeamId.hpp  Timer.cpp  Timer.hpp  main.cpp  make_unique.hpp  scrDisc.cpp  scrDisc.hpp  scrField.cpp  scrField.hpp  scrGlobals.cpp  scrGlobals.hpp  scrPlayer.cpp  scrPlayer.hpp  scrTeam.cpp  (+9 more)
